--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 streamlit = "^1.32.2"
+openai = "^1.23.2"
+ipython = "^8.23.0"
 
 
 [build-system]
